fullSandbox11072023/force-app/main/default/objects/ANZ_Target_Profiles__c/ANZ_Target_Profiles__c.object-meta.xml
<CustomObject>
    <label>ANZ Target Profiles</label>
    <nameField>
        <displayFormat>TP-{00000}</displayFormat>
        <label>ANZ Target Profiles Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ANZ Target Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>