fullSandbox11072023/force-app/main/default/objects/ANZ_Target_Profiles__c/fields/Account_Champion_2__c.field-meta.xml
<CustomField>
    <fullName>Account_Champion_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Search for Contacts to be entered here</inlineHelpText>
    <label>Account Champion(2)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account_Name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ANZ Target Profiles (Account Champion(2))</relationshipLabel>
    <relationshipName>ANZ_Target_Profiles4</relationshipName>
    <type>Lookup</type>
</CustomField>