fullSandbox11072023/force-app/main/default/objects/ANZ_Target_Profiles__c/fields/Account_Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Customer_Code__c</fullName>
    <formula>Account_Name__r.SAP_Sold_To__c</formula>
    <label>Account Customer Code</label>
    <type>Text</type>
</CustomField>