fullSandbox11072023/force-app/main/default/objects/ANZ_Target_Profiles__c/fields/Account_Saturation_TP_Range__c.field-meta.xml
<CustomField>
    <fullName>Account_Saturation_TP_Range__c</fullName>
    <formula>CASE(1,
    IF(	IO_Account_Saturation__c &gt; 0.66,1,0), &apos;&gt;66%&apos;,
	   IF(AND(	IO_Account_Saturation__c &gt;=0.33,	IO_Account_Saturation__c &lt;=0.66),1,0), &apos;33%-66%&apos;,				
   	&apos;&lt;33%&apos;)</formula>
    <label>Account Saturation TP Range</label>
    <type>Text</type>
</CustomField>