fullSandbox11072023/force-app/main/default/objects/ANZ_Target_Profiles__c/fields/Additional_CVC_Sales_eaches__c.field-meta.xml
<CustomField>
    <fullName>Additional_CVC_Sales_eaches__c</fullName>
    <label>Additional CVC Sales (eaches)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>