fullSandbox11072023/force-app/main/default/objects/ANZ_Target_Profiles__c/fields/Central_Line_IO_Potential__c.field-meta.xml
<CustomField>
    <fullName>Central_Line_IO_Potential__c</fullName>
    <formula>(0.15*(Last_Year_Eaches_CVC__c+Additional_CVC_Sales_eaches__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Central Line IO Potential</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>