fullSandbox11072023/force-app/main/default/objects/ANZ_Target_Profiles__c/fields/CMA_Notes__c.field-meta.xml
<CustomField>
    <fullName>CMA_Notes__c</fullName>
    <label>CMA Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>