fullSandbox11072023/force-app/main/default/objects/ANZ_Target_Profiles__c/fields/Code_Blue_Nurse_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Code_Blue_Nurse_Protocol__c</fullName>
    <label>Code Blue Nurse Protocol</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Protocol in place, nurses use IO often</fullName>
            </value>
            <value>
                <fullName>Protocol in place, nurses use IO/IV</fullName>
            </value>
            <value>
                <fullName>Protocol yes, not using IO consistently, or at all</fullName>
            </value>
            <value>
                <fullName>Only docs can insert, no nurse policy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>