fullSandbox11072023/force-app/main/default/objects/ANZ_Target_Profiles__c/fields/CPA_Procurement__c.field-meta.xml
<CustomField>
    <fullName>CPA_Procurement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CPA/Procurement</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account_Name__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ANZ Target Profiles (CPA/Procurement)</relationshipLabel>
    <relationshipName>ANZ_Target_Profiles9</relationshipName>
    <type>Lookup</type>
</CustomField>