fullSandbox11072023/force-app/main/default/objects/ANZ_Target_Profiles__c/fields/Do_Not_Run_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Run_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Run Trigger</label>
    <type>Checkbox</type>
</CustomField>