fullSandbox11072023/force-app/main/default/objects/ANZ_Target_Profiles__c/fields/DVA_Algorithm__c.field-meta.xml
<CustomField>
    <fullName>DVA_Algorithm__c</fullName>
    <label>DVA Algorithm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, used</fullName>
            </value>
            <value>
                <fullName>Yes, not used</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>