fullSandbox11072023/force-app/main/default/objects/ANZ_Target_Profiles__c/fields/ED_Contact__c.field-meta.xml
<CustomField>
    <fullName>ED_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ED Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account_Name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ANZ Target Profiles</relationshipLabel>
    <relationshipName>ANZ_Target_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>