fullSandbox11072023/force-app/main/default/objects/ANZ_Target_Profiles__c/fields/ICU_Contact__c.field-meta.xml
<CustomField>
    <fullName>ICU_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ICU Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account_Name__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ANZ Target Profiles (ICU Contact)</relationshipLabel>
    <relationshipName>ANZ_Target_Profiles7</relationshipName>
    <type>Lookup</type>
</CustomField>