fullSandbox11072023/force-app/main/default/objects/ANZ_Target_Profiles__c/fields/ICU_Educator_Liaison_Nurse__c.field-meta.xml
<CustomField>
    <fullName>ICU_Educator_Liaison_Nurse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ICU Educator/Liaison Nurse</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account_Name__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ANZ Target Profiles (ICU Educator/Liaison Nurse)</relationshipLabel>
    <relationshipName>ANZ_Target_Profiles8</relationshipName>
    <type>Lookup</type>
</CustomField>