fullSandbox11072023/force-app/main/default/objects/ANZ_Target_Profiles__c/fields/IO_Account_Saturation__c.field-meta.xml
<CustomField>
    <fullName>IO_Account_Saturation__c</fullName>
    <formula>X12M_Needle_Rolling_Sales_eaches__c / IO_Potential_Eaches__c</formula>
    <label>IO Account Saturation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>