fullSandbox11072023/force-app/main/default/objects/ANZ_Target_Profiles__c/fields/IO_in_MET_RRS_Equipment__c.field-meta.xml
<CustomField>
    <fullName>IO_in_MET_RRS_Equipment__c</fullName>
    <label>IO in MET/RRS Equipment?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>