fullSandbox11072023/force-app/main/default/objects/ANZ_Target_Profiles__c/fields/IO_Potential_Eaches__c.field-meta.xml
<CustomField>
    <fullName>IO_Potential_Eaches__c</fullName>
    <label>IO Potential (Eaches)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>