fullSandbox11072023/force-app/main/default/objects/ANZ_Target_Profiles__c/fields/IO_Potential_TP_Range__c.field-meta.xml
<CustomField>
    <fullName>IO_Potential_TP_Range__c</fullName>
    <label>IO Potential TP Range</label>
    <length>10</length>
    <type>Text</type>
</CustomField>