fullSandbox11072023/force-app/main/default/objects/ANZ_Target_Profiles__c/fields/IO_Product_Being_Used__c.field-meta.xml
<CustomField>
    <fullName>IO_Product_Being_Used__c</fullName>
    <label>IO Product Being Used</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EZ-IO</fullName>
            </value>
            <value>
                <fullName>TALON</fullName>
            </value>
            <value>
                <fullName>FAST1</fullName>
            </value>
            <value>
                <fullName>BD System</fullName>
            </value>
            <value>
                <fullName>NIO</fullName>
            </value>
            <value>
                <fullName>BIG</fullName>
            </value>
            <value>
                <fullName>SAM</fullName>
            </value>
            <value>
                <fullName>Jamshidi</fullName>
            </value>
            <value>
                <fullName>COOK</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>