fullSandbox11072023/force-app/main/default/objects/ANZ_Target_Profiles__c/fields/Last_Year_Eaches_Needles__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Eaches_Needles__c</fullName>
    <inlineHelpText>Needles Only</inlineHelpText>
    <label>Last Year Eaches (Needles)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>