fullSandbox11072023/force-app/main/default/objects/ANZ_Target_Profiles__c/fields/Last_Year_sales_CVC__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_sales_CVC__c</fullName>
    <label>Last Year sales (CVC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>