fullSandbox11072023/force-app/main/default/objects/ANZ_Target_Profiles__c/fields/Lignocaine_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Lignocaine_Protocol__c</fullName>
    <label>Lignocaine Protocol?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>