fullSandbox11072023/force-app/main/default/objects/ANZ_Target_Profiles__c/fields/MET_RRS_Policy_Ranking__c.field-meta.xml
<CustomField>
    <fullName>MET_RRS_Policy_Ranking__c</fullName>
    <label>MET/RRS Policy Ranking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>