fullSandbox11072023/force-app/main/default/objects/ANZ_Target_Profiles__c/fields/Nurse_Protocol_for_IO__c.field-meta.xml
<CustomField>
    <fullName>Nurse_Protocol_for_IO__c</fullName>
    <label>Nurse Protocol for IO?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>