fullSandbox11072023/force-app/main/default/objects/ANZ_Target_Profiles__c/fields/Ordering_Account__c.field-meta.xml
<CustomField>
    <fullName>Ordering_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ordering Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ANZ Target Profiles (Ordering Account)</relationshipLabel>
    <relationshipName>ANZ_Target_Profiles1</relationshipName>
    <type>Lookup</type>
</CustomField>