fullSandbox11072023/force-app/main/default/objects/ANZ_Target_Profiles__c/fields/Other_First_Access_Devices__c.field-meta.xml
<CustomField>
    <fullName>Other_First_Access_Devices__c</fullName>
    <label>Other First Access Devices</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PIVC</fullName>
            </value>
            <value>
                <fullName>CVC</fullName>
            </value>
            <value>
                <fullName>RIC</fullName>
            </value>
            <value>
                <fullName>MAC</fullName>
            </value>
            <value>
                <fullName>PSI</fullName>
            </value>
            <value>
                <fullName>PICC</fullName>
            </value>
            <value>
                <fullName>AHDC</fullName>
            </value>
            <value>
                <fullName>CDC</fullName>
            </value>
            <value>
                <fullName>Midline</fullName>
            </value>
            <value>
                <fullName>Hickman</fullName>
            </value>
            <value>
                <fullName>Port</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>