fullSandbox11072023/force-app/main/default/objects/ANZ_Target_Profiles__c/fields/Pediatric_Trauma_Center_Level__c.field-meta.xml
<CustomField>
    <fullName>Pediatric_Trauma_Center_Level__c</fullName>
    <label>Pediatric Trauma Center Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>