fullSandbox11072023/force-app/main/default/objects/ANZ_Target_Profiles__c/fields/Procurement_Supply_Management__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Supply_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Procurement/Supply Management</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account_Name__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ANZ Target Profiles (Procurement/Supply Management)</relationshipLabel>
    <relationshipName>ANZ_Target_ProfileszkSw</relationshipName>
    <type>Lookup</type>
</CustomField>