fullSandbox11072023/force-app/main/default/objects/ANZ_Target_Profiles__c/fields/Sales_2_Years_Ago_CVC__c.field-meta.xml
<CustomField>
    <fullName>Sales_2_Years_Ago_CVC__c</fullName>
    <label>Sales 2 Years Ago CVC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>