fullSandbox11072023/force-app/main/default/objects/ANZ_Target_Profiles__c/fields/Total_Beds__c.field-meta.xml
<CustomField>
    <fullName>Total_Beds__c</fullName>
    <inlineHelpText>This is to enter the number of beds</inlineHelpText>
    <label>Total Beds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>