fullSandbox11072023/force-app/main/default/objects/ANZ_Target_Profiles__c/fields/X12M_CVC_Rolling_Sales__c.field-meta.xml
<CustomField>
    <fullName>X12M_CVC_Rolling_Sales__c</fullName>
    <label>12M CVC Rolling Sales ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>