fullSandbox11072023/force-app/main/default/objects/ANZ_Target_Profiles__c/fields/X12M_CVC_Rolling_Sales_eaches__c.field-meta.xml
<CustomField>
    <fullName>X12M_CVC_Rolling_Sales_eaches__c</fullName>
    <inlineHelpText>Select CVC SKUs</inlineHelpText>
    <label>12M CVC Rolling Sales (eaches)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>