fullSandbox11072023/force-app/main/default/objects/ANZ_Target_Profiles__c/fields/YTD_Sales_all__c.field-meta.xml
<CustomField>
    <fullName>YTD_Sales_all__c</fullName>
    <label>YTD Sales($,all)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>