fullSandbox11072023/force-app/main/default/objects/ANZ_Target_Profiles__c/fields/Zip5__c.field-meta.xml
<CustomField>
    <fullName>Zip5__c</fullName>
    <formula>MID( Account_Name__r.BillingPostalCode, 0, 5)</formula>
    <label>Zip5</label>
    <type>Text</type>
</CustomField>