fullSandbox11072023/force-app/main/default/objects/ANZ_Target_Profiles__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>X12M_CVC_Rolling_Sales__c</columns>
    <columns>X12M_CVC_Rolling_Sales_eaches__c</columns>
    <columns>X12M_Needle_Rolling_Sales__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>